# AudioSender

./: .gitignore  AudioSender.jucer  CMakeLists.txt
Builds/MacOSX/: Info-AAX.plist  Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist  Source
Builds/MacOSX/AudioSender.xcodeproj/: project.pbxproj
Builds/MacOSX/AudioSender.xcodeproj/project.xcworkspace/xcuserdata/alexanderfortunato.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/AudioSender.xcodeproj/xcuserdata/alexanderfortunato.xcuserdatad/xcschemes/: xcschememanagement.plist
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SharedHeaders  SharedMemoryManager.h
